k8s-yamls/svc-multi-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: multiapp-svc
spec:
  selector:
    app: multistage
  ports:
    # Default port used by the image
    - port: 9001
