k8s-yamls/ingress-multi-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multistage-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /api/foos/$2
spec:
  rules:
    - http:
        paths:
          - path: "/api/foos"
            pathType: ImplementationSpecific
            backend:
              service:
                name: multiapp-svc
                port:
                  number: 9001
